# nyx

./: .gitignore  CMakeLists.txt  README.md
dolos/: CMakeLists.txt
dolos/lib/dolos/: offsets.js
dolos/src/dolos/: detour.h  dolos.cc  dolos.h  dolos_binding.cc  dolos_binding.h  game.h  main_thread.cc  main_thread.h  offset_cache.cc  offset_cache.h  offset_registry.cc  offset_registry.h  offset_types.h  pattern_scanner.cc  pattern_scanner.h  pe_builder.cc  pe_builder.h  pipe_log.cc  pipe_log.h
dolos/src/dolos/backend/: d3d12_imgui.cc  d3d12_imgui.h  d3d12_imgui_pixel.h  d3d12_imgui_vertex.h  d3d12_renderer.cc  d3d12_renderer.h  renderer.cc  renderer.h  win32_window.cc  win32_window.h
dolos/typings/: dolos-bindings.d.ts
dolos/typings/dolos/: offsets.d.ts
lib/: console.js  events.js  fs.js  gui.js  memory.js  path.js  timers.js
lib/internal/bootstrap/: nyx.js  realm.js
lib/internal/main/: run_packages.js
lib/internal/modules/: loader.js  package.js
src/nyx/: base_object.cc  base_object.h  builtins.cc  builtins.h  console_binding.cc  env.cc  env.h  errors.cc  errors.h  extension.cc  extension.h  game_lock.cc  game_lock.h  imgui_draw_context.cc  imgui_draw_context.h  imgui_draw_data_store.cc  imgui_draw_data_store.h  imgui_input_event.cc  imgui_input_event.h  imgui_v8.h  isolate_data.cc  isolate_data.h  module_wrap.cc  module_wrap.h  nyx.cc  nyx.h  nyx_binding.cc  nyx_binding.h  nyx_fs.cc  nyx_imgui.cc  nyx_imgui.h  nyx_memory.cc  process_binding.cc  process_binding.h  realm.cc  realm.h  timers.cc  timers.h  union_bytes.h  util-inl.h  (+5 more)
src/nyx/gui/: canvas.cc  canvas.h  colors.cc  colors.h  combo.cc  combo.h  common.cc  common.h  image.cc  image.h  input.cc  input.h  io.cc  layout.cc  layout.h  listbox.cc  listbox.h  menus.cc  menus.h  panel.cc  panel.h  plotting.cc  plotting.h  popups.cc  popups.h  selectable.cc  selectable.h  slider.cc  slider.h  stack.cc  stack.h  tables.cc  tables.h  tabs.cc  tabs.h  text.cc  text.h  tooltip.cc  tooltip.h  trees.cc  (+6 more)
tools/: CMakeLists.txt  js2c.cc
typings/: console.d.ts  events.d.ts  fs.d.ts  gui.d.ts  internal-bindings.d.ts  memory.d.ts  path.d.ts  process.d.ts  timers.d.ts
